syntax = "proto3";
package DumpProtos;

message DailyStreaksProto {
	repeated StreakProto streaks = 1;

	message StreakProto {
		QuestType quest_type = 1;
		int32 count = 2;
		int32 target = 3;
		int32 remaining_today = 4;
	}
}
