syntax = "proto3";
package DumpProtos;

message HoloInventoryKeyProto {

	oneof Type {
		fixed64 pokemon_id = 1;
		Item item = 2;
		int32 pokedex_entry_id = 3;
		bool player_stats = 4;
		bool player_currency = 5;
		bool player_camera = 6;
		bool inventory_upgrades = 7;
		bool applied_items = 8;
		bool egg_incubators = 9;
		int32 pokemon_family_id = 10;
		QuestType quest_type = 11;
		string avatar_template_id = 12;
		bool raid_tickets = 13;
		bool quests = 14;
		bool gift_boxes = 15;
		bool beluga_incense_box = 16;
		bool vs_seeker_upgrades = 17;
		bool limited_purchase_sku_record = 19;
		string sticker_id = 22;
	}
}
