syntax = "proto3";
package DumpProtos;

message RocketBalloonIncidentDisplayProto {
	string incident_id = 1;
	IncidentDisplayType incident_display_type = 2;
}
